# Agentic-5g

./: .gitignore
backend/: .env.example  check_workflow.py  nixpacks.toml  pyproject.toml  railway.json
backend/app/: __init__.py  main.py
backend/app/api/: deps.py  errors.py  middleware.py
backend/app/api/routers/: __init__.py  analytics.py  health.py  logs.py  models.py  policies.py  services.py  settings.py  simulation.py  topology.py  twin.py  workflows.py  ws.py
backend/app/api/schemas/: common.py  workflow.py
backend/app/api/ws/: hub.py
backend/app/application/agents/: base.py  documentation.py  executor.py  memory_agent.py  observer.py  optimizer.py  orchestrator.py  planner.py  recovery.py
backend/app/application/agents/prompts/: registry.py
backend/app/application/sel/: invoker.py  policy_engine.py  registry.py  tools.py
backend/app/application/sel/services/: aimle.py  catalog.py  control_plane.py  dcf.py  edge.py  mitigation.py  nrf.py  nwdaf.py  twin_read.py  upf.py
backend/app/application/twin_service/: scenarios.py  service.py
backend/app/application/workflow/: engine.py  nodes.py  routing.py  state.py  triggers.py
backend/app/domain/agents/: memory.py  models.py  ports.py
backend/app/domain/services/: models.py  policy.py  ports.py
backend/app/domain/twin/: entities.py  events.py  kpi.py  network_twin.py  ports.py  profile.py  topology.py
backend/app/domain/twin/nf/: __init__.py  amf.py  dcf.py  edge.py  nrf.py  nwdaf.py  remaining.py  smf.py  upf.py
backend/app/infrastructure/: container.py
backend/app/infrastructure/bus/: bus.py
backend/app/infrastructure/config/: settings.py
backend/app/infrastructure/db/: engine.py  models.py  seed.py
backend/app/infrastructure/db/repos/: log_repo.py  memory_store.py  policy_store.py  workflow_repo.py
backend/app/infrastructure/llm/: client.py
backend/app/infrastructure/rng/: rng.py
backend/app/infrastructure/sim/: scheduler.py
backend/app/infrastructure/writer/: writer.py
backend/data/: agent5g.db-shm  agent5g.db-wal
backend/tests/determinism/: test_golden_trajectory.py  test_golden_workflow.py
backend/tests/fixtures/llm/: write_fixture.py
backend/tests/integration/: test_health.py  test_scenario_a.py  test_scenario_b.py  test_scenario_c.py
backend/tests/safety/: test_safety_invariants.py
backend/tests/unit/agents/: test_agent_models.py  test_ports.py
backend/tests/unit/infra/: test_bus_llm.py  test_engine.py  test_orm_models.py  test_repos_seed_scheduler.py  test_rng.py  test_settings.py  test_writer.py
backend/tests/unit/sel/: test_sel.py
backend/tests/unit/services/: test_service_models.py
backend/tests/unit/twin/: test_amf_smf_upf.py  test_entities_base.py  test_events.py  test_kpi.py  test_nrf.py  test_profile.py  test_remaining_nfs.py  test_topology.py
docs/: 01-system.md  02-research-background.md  03-architecture.md  04-ui.md  05-agents.md  06-digital-twin.md  07-network-core.md  08-services.md  09-api.md  10-backend.md  11-frontend.md  12-database.md  13-workflow-engine.md  14-prompts.md  15-kiro-rules.md  16-testing.md  17-deployment.md  18-demo.md  19-presentation.md  20-future-work.md  README.md  (+1 more)
(+55 files in other folders)
